Switch to gradlex